perbaikian user dan admin sementara

--- a/wp-content/themes/talon/style.css
+++ b/wp-content/themes/talon/style.css
@@ -3273,3 +3273,8 @@ box-shadow: 10px 13px 8px -5px rgba(173,173,173,1);
     border: 1px solid #0e8dd2;
     border-radius: 10px;
 }
+.form-control
+{
+	background-color:#d5e3e4 !important;
+	border: 1px solid #798794 !important;
+}
