--- a/wp-content/themes/talon/style.css
+++ b/wp-content/themes/talon/style.css
@@ -3278,3 +3278,8 @@ box-shadow: 10px 13px 8px -5px rgba(173,173,173,1);
 	background-color:#d5e3e4 !important;
 	border: 1px solid #798794 !important;
 }
+
+.tes14042020
+{
+	
+}
