--- a/wp-content/themes/talon/style.css
+++ b/wp-content/themes/talon/style.css
@@ -3278,8 +3278,15 @@ box-shadow: 10px 13px 8px -5px rgba(173,173,173,1);
 	background-color:#d5e3e4 !important;
 	border: 1px solid #798794 !important;
 }
-
-.tes14042020
+.card-body
 {
-	
+	text-align: center;
+}
+.card-body .button
+{
+	padding: 10px !important;
+}
+.row-profile .button
+{
+	padding: 10px !important;
 }
