--- a/wp-content/themes/talon/style.css
+++ b/wp-content/themes/talon/style.css
@@ -3275,7 +3275,7 @@ box-shadow: 10px 13px 8px -5px rgba(173,173,173,1);
 }
 .form-control
 {
-	background-color:#d5e3e4 !important;
+	/*background-color:#d5e3e4 !important;*/
 	border: 1px solid #798794 !important;
 }
 .card-body
